--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,5 +5,6 @@
   <% @lists.each do |list| %>
   <p><%= link_to list.name, list_path(list) %></p>
   <%= link_to 'X', list_path(list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+  <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
   <% end %>
 </div>
