--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,6 +2,7 @@
   <%= simple_form_for @list do |f| %>
       <%= f.input :name, label: false, input_html: { placeholder: "List name", class: "input mt-3 mb-3" } %>
       <%#= f.input :photo, as: :file, label: false, class: 'ms-3' %>
+      <%= f.input :photo, as: :file %>
       <%= f.submit 'Add', class: 'btn btn-primary mt-1'%>
   <% end %>
 </div>
