--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,8 +3,10 @@
   <h2 class="link"><%= link_to "New List", new_list_path %></h2>
 
   <% @lists.each do |list| %>
+  <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.photo.attached? ? cl_image_path(list.photo.key) : asset_path('boris_retreat_2017.jpg') %>)">
   <p><%= link_to list.name, list_path(list) %></p>
   <%= link_to 'X', list_path(list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-  <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+  </div>
+
   <% end %>
 </div>
