--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,6 +2,8 @@
   width: auto;
   font-size: 12px;
   color: #444;
+  background-color: #111;
+  border: 1px solid #FD0572;
   margin-right: 8px;
 }
 .card-category {
@@ -11,18 +13,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #fff;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   position: relative;
   width: 240px;
 }
 
 .card-category a {
-  color: #fff;
+  color: #444;
 }
 
 .card-trip-link {
