--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,9 +1,9 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #FD0572;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
+$yellow: rgb(225, 255, 30);
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
